<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.potikorn.testscript.SecondActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_txt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allergy_1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_txt_2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_txt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allergy_2"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_txt_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allergy_3"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_txt_1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_txt_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allergy_4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_txt_3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_txt_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allergy_5"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_txt_4"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_swap_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="english"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="213dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_swap_de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="Deutsch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_swap_en" />

</android.support.constraint.ConstraintLayout>
